fixed: HTML validation errors on login.html. feat: improved accessibility. aria-labels added to <a> elements. Colour of <a> element changed to a darker blue for better contrast with the background

--- a/static/scss/login-register.scss
+++ b/static/scss/login-register.scss
@@ -6,6 +6,8 @@ $black: #212529;
 $padding: 0.5rem 1rem 0.5rem 1rem;
 $font: 'Poppins', sans-serif;
 
+// font-family: 'Noto Sans', sans-serif;
+
 $color1: #dae8ec;
 $color2: #dac5bc;
 $color3: #b48464;
@@ -52,6 +54,7 @@ $color5: #1d1611;
         margin-bottom: 1rem;
         margin-top: 1.5rem;
         font-size: 1.2rem;
+        color: #0063cc;
     }
     button {
         margin-top: 1rem;
